# functional-compiler

./: CMakeLists.txt  LICENSE  README.md
.circleci/: config.yml
examples/: example.code  example_closure.code  example_compose.code  example_defs.code  example_defs2.code  example_factorial.code  example_first_class.code  example_lambda.code  example_letrec.code  example_lets.code  example_mult.code  example_negative.code  example_rec.code  example_unicode.code
src/: ast.c  ast.h  closure.c  closure.h  closure_conversion.c  closure_conversion.h  compile.c  eval.c  eval.h  global.h  ll.c  ll.h  parse.c  parse.h  scope.c  scope.h  standard.asm  tokenise.c  tokenise.h
test/: error_lambda_short.code  error_undefined.code  error_unmatched_close.code  test.bats
